--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>A practice webpage</title>
+  </head>
+  <body>
+    <div style="margin: 50px; padding: 10px">
+    <h1>This is the title of the webpage</h1>
+    <p>It is a very nice webpage.</p>
+    <p>Here is a dog.</p>
+    <img style="border-radius:50px" src="https://vetstreet.brightspotcdn.com/dims4/default/54186d0/2147483647/thumbnail/590x420/quality/90/?url=https%3A%2F%2Fvetstreet-brightspot.s3.amazonaws.com%2F40%2F58%2F3bc5c01c4cdb8a0581681831faa9%2Fgreat-dane-shaking-paw-thinkstockphotos-522650067-590.jpg" alt="picture of a dog">
+    <p><a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwilnu6wmMnkAhWKop4KHQx_DoMQjRx6BAgBEAQ&url=http%3A%2F%2Fwww.vetstreet.com%2Fdogs%2F&psig=AOvVaw3uU388z5BkUxKuJQ0xjT-K&ust=1568305759151083">Link to image source.</a></a></p>
+    <h2>Additional info</h2>
+    <p>The dog's priorities:</p>
+    <ul>
+      <li>Eating</li>
+      <li>Squirrels</li>
+      <li>Softness</li>
+    </ul>
+    </div>
+  </body>
+  
+</html>
