--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE HTML>
+<html>
+
+<head>
+  <h1>This is the Title</h1>
+</head>
+
+  <body>
+    <p>This is a body paragraph</p>
+  </body>
+    
+</html>
